--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ jobs:
   check-application:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      uses: actions/checkout@v2
+      uses: actions/setup-go@v2
       with:
         go-version: 1.22.2
       - run: go test
