Fix to workflow script 2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,21 @@
 name: ci-cd-go-workflow
-on: [push]
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   check-application:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v2
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.22.2
-      - run: go test
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Configuração do ambiente Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.22.2
+
+      - name: Execução dos testes Go
+        run: go test
